--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,24 @@
 </head>
 <body>
     <h1 class="center">MEAN - Screenshooter</h1>
+
     <!--<a class="waves-effect waves-light btn modal-trigger" href="#modal1">Modal</a>-->
-    <a class="btn-floating btn-large waves-effect waves-light red modal-trigger" href="#modal1">+</a>
+    <div class="container">
+        <div class="row">
+            <div class="col s1">
+                <a class="btn-floating btn-large waves-effect waves-light red modal-trigger" href="#modal1">+</a>
+            </div>
+            <div class="col s11">
+                <ul id="websites">
+
+                </ul>
+            </div>
+        </div>
+    </div>
 
     <!-- Modal Structure -->
-    <!--<div id="modal1" class="modal">-->
-        <!--<div class="modal-content">-->
+    <div id="modal1" class="modal">
+        <div class="modal-content">
             <h4>Quel site prendre en photo ?</h4>
             <div class="row">
                 <div class="col s8">
@@ -26,11 +38,11 @@
                     <textarea name="description" id="description" cols="30" rows="10"></textarea>
                 </div>
             </div>
-        <!--</div>-->
-        <!--<div class="modal-footer">-->
-            <!--<a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Agree</a>-->
-        <!--</div>-->
-    <!--</div>-->
+        </div>
+        <div class="modal-footer">
+            <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
+        </div>
+    </div>
 
 
 
@@ -50,7 +62,14 @@
             $("#submit").click(function(){
                 if($("#website_to_screen").val()){
                     var url = $("#website_to_screen").val().substr(0, 7) != "http://" ? url = "http://" + $("#website_to_screen").val() : $("#website_to_screen").val();
-                    socket.emit('new website', { website: url, description: $("#description").val() }); // Envoi un objet au serveur node
+                    socket.emit('new_website', { url: url, description: $("#description").val() }); // Envoi un objet au serveur node
+                }
+            });
+
+            socket.on("website_list", function(data){
+                for(var d in data){
+                    console.log(d);
+                    $("#websites").append("<li><h2>"+data[d].url+"</h2><p>"+data[d].description+"</p><img src="+data[d].screenshot+" alt='"+data[d].description+"' /></li>");
                 }
             });
 
